@@ -1,3 +1,8 @@
+2010-11-01  Paul Koning  <ni1d@arrl.net>
+
+	* config/pdp11/pdp11.c (pdp11_return_in_memory): Return vector and
+	complex modes in memory.
+
 2010-11-01  Nathan Froyd  <froydnj@codesourcery.com>
 
 	* tree.c (build_vector_from_val): Use useless_type_conversion_p.
